// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should render banner text correctly with given strings 1`] = `
<div>
  <div
    class="logoBar"
  >
    <img
      class="logoPic"
      src="./images/logo.jpg"
    />
  </div>
  <div
    class="Row"
  >
    <div
      class="showcase"
      id="Col"
    >
      <div />
      <div />
    </div>
  </div>
</div>
`;

exports[`Home should render carousel pictures correctly with given product id 1`] = `
<div>
  <div
    class="logoBar"
  >
    <img
      class="logoPic"
      src="./images/logo.jpg"
    />
  </div>
  <div
    class="Row"
  >
    <div
      class="showcase"
      id="Col"
    >
      <div />
      <div />
    </div>
  </div>
</div>
`;

exports[`Home should render correctly with no props 1`] = `
<div>
  <div
    class="logoBar"
  >
    <img
      class="logoPic"
      src="./images/logo.jpg"
    />
  </div>
  <div
    class="Row"
  >
    <div
      class="showcase"
      id="Col"
    >
      <div />
      <div />
    </div>
  </div>
</div>
`;

exports[`Main Carousel render a carousel with a current picture index and an array of picture Urls 1`] = `
<div>
  <div
    class="Row2"
    id="carousel3"
  >
    <div
      class="carousel slide"
      data-interval="false"
      data-ride="carousel"
      id="carouselExampleIndicators"
    >
      <ol
        class="carousel-indicators"
      >
        <li
          class="active"
          data-slide-to="0"
          data-target="#carouselExampleIndicators"
        />
        <li
          data-slide-to={1}
          data-target="#carouselExampleIndicators"
        />
        <li
          data-slide-to={2}
          data-target="#carouselExampleIndicators"
        />
      </ol>
      <div
        class="carousel-inner"
      >
        <div
          class="carousel-item active"
        >
          <img
            class="d-block w-100"
            id="id=main-carousel"
          />
        </div>
        <div
          class="carousel-item"
        >
          <img
            class="d-block w-100"
            src="../dist/images/boots.jpg"
          />
        </div>
        <div
          class="carousel-item"
        >
          <img
            class="d-block w-100"
            src="../dist/images/shorts.jpg"
          />
        </div>
        <div
          class="carousel-item"
        >
          <img
            class="d-block w-100"
            src="../dist/images/jacket.jpg"
          />
        </div>
      </div>
      <a
        class="carousel-control-prev"
        data-slide="prev"
        href="#carouselExampleIndicators"
        id="main-carousel"
        role="button"
      >
        <span
          aria-hidden="true"
          class="carousel-control-prev-icon"
        />
        <span
          class="sr-only"
        >
          Previous
        </span>
      </a>
      <a
        class="carousel-control-next"
        data-slide="next"
        href="#carouselExampleIndicators"
        id="main-carousel"
        role="button"
      >
        <span
          aria-hidden="true"
          class="carousel-control-next-icon"
        />
        <span
          class="sr-only"
        >
          Next
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Outfits render a carousel with a current picture index and an array of picture Urls 1`] = `
<div>
  <div
    className="container"
  >
    <h4>
      <em>
        <u>
          Your Outfit(s):
        </u>
      </em>
    </h4>
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="card text-center"
          style={
            Object {
              "height": "31rem",
              "width": "14rem",
            }
          }
        >
          <div
            className="card-body"
          />
          <div
            className="card-body text-dark"
          >
            <button
              className="btn btn-floating"
              onClick={[Function]}
              type="button"
            >
              <h1>
                +
              </h1>
            </button>
            <h5
              className="card-title text-center"
            >
              Add to Your Outfit
            </h5>
          </div>
        </div>
        <div
          className="card-group d-flex flex-nowrap overflow-auto"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Outfits should not render when nothing pressed 1`] = `
<div>
  <div
    className="container"
  >
    <h4>
      <em>
        <u>
          Your Outfit(s):
        </u>
      </em>
    </h4>
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="card-group d-flex flex-nowrap"
        >
          <div
            className="card text-center"
            style={
              Object {
                "height": "31rem",
                "width": "14rem",
              }
            }
          >
            <div
              className="card-body"
            />
            <div
              className="card-body text-dark"
            >
              <button
                className="btn btn-floating"
                onClick={[Function]}
                type="button"
              >
                <h1>
                  +
                </h1>
              </button>
              <h5
                className="card-title text-center"
              >
                Add to Your Outfit
              </h5>
            </div>
          </div>
          <div
            className="card-group d-flex flex-nowrap overflow-auto"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Outfits should render a card when + button clicked 1`] = `
<div>
  <div
    className="container"
  >
    <h4>
      <em>
        <u>
          Your Outfit(s):
        </u>
      </em>
    </h4>
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="card-group d-flex flex-nowrap"
        >
          <div
            className="card text-center"
            style={
              Object {
                "height": "31rem",
                "width": "14rem",
              }
            }
          >
            <div
              className="card-body"
            />
            <div
              className="card-body text-dark"
            >
              <button
                className="btn btn-floating"
                onClick={[Function]}
                type="button"
              >
                <h1>
                  +
                </h1>
              </button>
              <h5
                className="card-title text-center"
              >
                Add to Your Outfit
              </h5>
            </div>
          </div>
          <div
            className="card-group d-flex flex-nowrap overflow-auto"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Related Products component render pictures of related products from one product id 1`] = `
<div>
  <h6>
    Lodaing....
  </h6>
</div>
`;

exports[`Related Products component should not render if no id passed 1`] = `
<div>
  <h6>
    Lodaing....
  </h6>
</div>
`;

exports[`Related Products component should not render with no id 1`] = `
<div>
  <h6>
    Lodaing....
  </h6>
</div>
`;

exports[`Reviews render a carousel with a current picture index and an array of picture Urls 1`] = `
<div>
  <Form />
</div>
`;

exports[`Star Ratings render a carousel with a current picture index and an array of picture Urls 1`] = `
<div
  className="star-ratings"
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "position": "relative",
    }
  }
  title="4 Stars"
>
  <svg
    className="star-grad"
    style={
      Object {
        "height": "0",
        "position": "absolute",
        "visibility": "hidden",
        "width": "0",
        "zIndex": "0",
      }
    }
  >
    <defs>
      <linearGradient
        id="starGrad820726592066316"
        x1="0%"
        x2="100%"
        y1="0%"
        y2="0%"
      >
        <stop
          className="stop-color-first"
          offset="0%"
          style={
            Object {
              "stopColor": "rgb(189, 153, 57)",
              "stopOpacity": "1",
            }
          }
        />
        <stop
          className="stop-color-first"
          offset="0%"
          style={
            Object {
              "stopColor": "rgb(189, 153, 57)",
              "stopOpacity": "1",
            }
          }
        />
        <stop
          className="stop-color-final"
          offset="0%"
          style={
            Object {
              "stopColor": "rgb(203, 211, 227)",
              "stopOpacity": "1",
            }
          }
        />
        <stop
          className="stop-color-final"
          offset="100%"
          style={
            Object {
              "stopColor": "rgb(203, 211, 227)",
              "stopOpacity": "1",
            }
          }
        />
      </linearGradient>
    </defs>
  </svg>
  <Star
    changeRating={null}
    fillId="starGrad820726592066316"
    gradientPathName=""
    hoverMode={false}
    hoverOverStar={null}
    ignoreInlineStyles={false}
    isCurrentHoveredStar={false}
    isFirstStar={true}
    isHovered={false}
    isLastStar={false}
    isPartiallyFullStar={false}
    isStarred={true}
    key="1"
    starDimension="15px"
    starEmptyColor="rgb(203, 211, 227)"
    starHoverColor="rgb(230, 67, 47)"
    starRatedColor="rgb(189, 153, 57)"
    starSpacing="10px"
    svgIconPath="m25,1 6,17h18l-14,11 5,17-15-10-15,10 5-17-14-11h18z"
    svgIconViewBox="0 0 51 48"
    unHoverOverStar={null}
  />
  <Star
    changeRating={null}
    fillId="starGrad820726592066316"
    gradientPathName=""
    hoverMode={false}
    hoverOverStar={null}
    ignoreInlineStyles={false}
    isCurrentHoveredStar={false}
    isFirstStar={false}
    isHovered={false}
    isLastStar={false}
    isPartiallyFullStar={false}
    isStarred={true}
    key="2"
    starDimension="15px"
    starEmptyColor="rgb(203, 211, 227)"
    starHoverColor="rgb(230, 67, 47)"
    starRatedColor="rgb(189, 153, 57)"
    starSpacing="10px"
    svgIconPath="m25,1 6,17h18l-14,11 5,17-15-10-15,10 5-17-14-11h18z"
    svgIconViewBox="0 0 51 48"
    unHoverOverStar={null}
  />
  <Star
    changeRating={null}
    fillId="starGrad820726592066316"
    gradientPathName=""
    hoverMode={false}
    hoverOverStar={null}
    ignoreInlineStyles={false}
    isCurrentHoveredStar={false}
    isFirstStar={false}
    isHovered={false}
    isLastStar={false}
    isPartiallyFullStar={false}
    isStarred={true}
    key="3"
    starDimension="15px"
    starEmptyColor="rgb(203, 211, 227)"
    starHoverColor="rgb(230, 67, 47)"
    starRatedColor="rgb(189, 153, 57)"
    starSpacing="10px"
    svgIconPath="m25,1 6,17h18l-14,11 5,17-15-10-15,10 5-17-14-11h18z"
    svgIconViewBox="0 0 51 48"
    unHoverOverStar={null}
  />
  <Star
    changeRating={null}
    fillId="starGrad820726592066316"
    gradientPathName=""
    hoverMode={false}
    hoverOverStar={null}
    ignoreInlineStyles={false}
    isCurrentHoveredStar={false}
    isFirstStar={false}
    isHovered={false}
    isLastStar={false}
    isPartiallyFullStar={false}
    isStarred={true}
    key="4"
    starDimension="15px"
    starEmptyColor="rgb(203, 211, 227)"
    starHoverColor="rgb(230, 67, 47)"
    starRatedColor="rgb(189, 153, 57)"
    starSpacing="10px"
    svgIconPath="m25,1 6,17h18l-14,11 5,17-15-10-15,10 5-17-14-11h18z"
    svgIconViewBox="0 0 51 48"
    unHoverOverStar={null}
  />
  <Star
    changeRating={null}
    fillId="starGrad820726592066316"
    gradientPathName=""
    hoverMode={false}
    hoverOverStar={null}
    ignoreInlineStyles={false}
    isCurrentHoveredStar={false}
    isFirstStar={false}
    isHovered={false}
    isLastStar={true}
    isPartiallyFullStar={false}
    isStarred={false}
    key="5"
    starDimension="15px"
    starEmptyColor="rgb(203, 211, 227)"
    starHoverColor="rgb(230, 67, 47)"
    starRatedColor="rgb(189, 153, 57)"
    starSpacing="10px"
    svgIconPath="m25,1 6,17h18l-14,11 5,17-15-10-15,10 5-17-14-11h18z"
    svgIconViewBox="0 0 51 48"
    unHoverOverStar={null}
  />
</div>
`;

exports[`render a carousel with a current picture index and an array of picture Urls 1`] = `
<div>
  <div
    class="Row2"
    id="carousel3"
  >
    <div
      class="carousel slide"
      data-interval="false"
      data-ride="carousel"
      id="carouselExampleIndicators"
    >
      <ol
        class="carousel-indicators"
      >
        <li
          class="active"
          data-slide-to="0"
          data-target="#carouselExampleIndicators"
        />
        <li
          data-slide-to={1}
          data-target="#carouselExampleIndicators"
        />
        <li
          data-slide-to={2}
          data-target="#carouselExampleIndicators"
        />
      </ol>
      <div
        class="carousel-inner"
      >
        <div
          class="carousel-item active"
        >
          <img
            class="d-block w-100"
            id="id=main-carousel"
          />
        </div>
        <div
          class="carousel-item"
        >
          <img
            class="d-block w-100"
            src="../dist/images/boots.jpg"
          />
        </div>
        <div
          class="carousel-item"
        >
          <img
            class="d-block w-100"
            src="../dist/images/shorts.jpg"
          />
        </div>
        <div
          class="carousel-item"
        >
          <img
            class="d-block w-100"
            src="../dist/images/jacket.jpg"
          />
        </div>
      </div>
      <a
        class="carousel-control-prev"
        data-slide="prev"
        href="#carouselExampleIndicators"
        id="main-carousel"
        role="button"
      >
        <span
          aria-hidden="true"
          class="carousel-control-prev-icon"
        />
        <span
          class="sr-only"
        >
          Previous
        </span>
      </a>
      <a
        class="carousel-control-next"
        data-slide="next"
        href="#carouselExampleIndicators"
        id="main-carousel"
        role="button"
      >
        <span
          aria-hidden="true"
          class="carousel-control-next-icon"
        />
        <span
          class="sr-only"
        >
          Next
        </span>
      </a>
    </div>
  </div>
</div>
`;
